try this please

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div id="mySidenav" class="sidenav">
       <div id="top">
-				<big><img src="favicon.png" width="32"/> &#9776;zMusic</big>
+				<big><img src="favicon.png" width="30"/> &#9776;zMusic</big>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <hr style="margin-top: -6px;" />
+        <hr />
       </div>
       <a href="javascript:void(0)" onclick="_blank">Download</a>  
       <a href="#" target="_blank">Contact</a>
@@ -20,14 +20,14 @@
       <a href="#" target="_blank">More</a>
     <div id="dclogo">
       <hr>
-      <p>"Learning every thing the hard way<br>so you don't have to!"
-      <img style="margin-right: -60px;" src="logo.png" width="140px"/></p>
+      <p>"Learning every thing the hard way<br>so you don't have to!"</p>
+      <img style="margin-right: -60px;" src="logo.png" width="140px"/>
     </div>
   </div>
 		
   <div id="header">
     <a type="action" class="openbtn">
-    <span onclick="openNav()"><img src="favicon.png" width="32"/> &#9776;zMusic</span></a>
+    <span onclick="openNav()"><img src="favicon.png" width="30"/> &#9776;zMusic</span></a>
   </div>  
   
   <div id="app"></div>
