--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="mySidenav" class="sidenav">
       <div id="top">
-				<big><img src="favicon.png" width="30"/> &#9776;zMusic</big>
+				<span><img src="favicon.png" width="30"/> &#9776;zMusic</span>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <hr />
       </div>
@@ -19,7 +19,7 @@
       <a href="#" target="_blank">About</a>  
       <a href="#" target="_blank">More</a>
     <div id="dclogo">
-      <hr>
+      <hr />
       <p>"Learning every thing the hard way<br>so you don't have to!"</p>
       <img style="margin-right: -60px;" src="logo.png" width="140px"/>
     </div>
