and this too...

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="mySidenav" class="sidenav">
       <div id="top">
-				<span><img src="favicon.png" width="30"/> &#9776;zMusic</span>
+				<span class="title"><img class="icon" src="favicon.png" width="30"/> &#9776;zMusic</span>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <hr />
       </div>
@@ -21,13 +21,13 @@
     <div id="dclogo">
       <hr />
       <p>"Learning every thing the hard way<br>so you don't have to!"</p>
-      <img style="margin-right: -60px;" src="logo.png" width="140px"/>
+      <img id="logo" src="logo.png" width="140px"/>
     </div>
   </div>
 		
   <div id="header">
     <a type="action" class="openbtn">
-    <span onclick="openNav()"><img src="favicon.png" width="30"/> &#9776;zMusic</span></a>
+    <span onclick="openNav()"><img class="icon" src="favicon.png" width="30"/> &#9776;zMusic</span></a>
   </div>  
   
   <div id="app"></div>
