--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div id="top">
 				<span class="title"><img class="icon" src="favicon.png" width="30"/> &#9776;zMusic</span>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <hr />
       </div>
+			<hr />
       <a href="javascript:void(0)" onclick="_blank">Download</a>  
       <a href="#" target="_blank">Contact</a>
       <a href="#" target="_blank">About</a>  
@@ -27,7 +27,7 @@
 		
   <div id="header">
     <a type="action" class="openbtn">
-    <span onclick="openNav()"><img class="icon" src="favicon.png" width="30"/> &#9776;zMusic</span></a>
+    <span onclick="openNav()"><img class="icon" src="favicon2.png" width="30"/> &#9776;zMusic</span></a>
   </div>  
   
   <div id="app"></div>
