--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<span class="title"><img class="icon" src="favicon.png" width="30"/> &#9776;zMusic</span>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       </div>
-			<hr />
+			<hr style="margin-top:45px;" />
       <a href="javascript:void(0)" onclick="_blank">Download</a>  
       <a href="#" target="_blank">Contact</a>
       <a href="#" target="_blank">About</a>  
