--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <link rel="stylesheet" href="styles/nature.css">
+  <link rel="stylesheet" href="./public/nature.css">
   <link rel="shortcut icon" href="favicon.png">
 </head>
   <body>
